# MicrofluidicSystem4Nanoparticles

./: .gitignore  API.md  CLAUDE.md  README.md  implement.md  overview.md  上位机API.md
Firmware/: CMakeLists.txt  rule.md  sdkconfig
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  MCP4726_DAC.md  SLF3S_flow_sensor.c  SLF3S_flow_sensor.h  abp_pressure_sensor.c  abp_pressure_sensor.h  flow_sensor.c  i2c_interface.c  i2c_interface.h  main.c  main.h  mcp4726_dac.c  mcp4726_dac.h  mp6_driver.c  mp6_driver.h  pid_controller.c  pid_controller.h  sensor_config.c  sensor_config.h  serial_comm.c  serial_comm.h
HostPC/: README.md  fluent_theme.py  main_gui.py  microfluidic_api.py  requirements.txt  tube_calibration.py
Report/: thesis-info.tex  thesis.tex
Report/Abstract/: abstract.tex
Report/Acknowledgement/: acknowledgement.tex
Report/Chapter1/: chapter1.tex
Report/Chapter2/: chapter2.tex
Report/Chapter3/: chapter3.tex
Report/Chapter4/: chapter4.tex
Report/Declaration/: declaration.tex
Report/Materials/: marking-criteria.md
Report/References/: references.bib
