idf_component_register(SRCS "abp_pressure_sensor.c" "mcp4726_dac.c" "i2c_interface.c"
                             "sensor_config.c"
                             "SLF3S_flow_sensor.c"
                             "serial_comm.c"
                             "pid_controller.c"
                             "mp6_driver.c"
                             "main.c"
                    INCLUDE_DIRS ".")
